# MessengerAppProject

./: .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
MessengerApp/: CMakeLists.txt  MessengerAgent.cpp  MessengerAgent.hpp  main.cpp
MessengerApp/Common/: Logger.cpp  Logger.hpp
MessengerApp/Common/Config/: pathConfig.hpp
MessengerApp/Connection/Client/: Client.cpp  Client.hpp
MessengerApp/Connection/Helpers/: Message.cpp  Message.hpp  MessageDecoder.cpp  MessageDecoder.hpp  MessageHandler.cpp  MessageHandler.hpp
MessengerApp/Connection/Server/: Server.cpp  Server.hpp  Session.cpp  Session.hpp
MessengerApp/Database/: AdminDatabaseController.hpp  DatabaseController.cpp  DatabaseController.hpp  UserDatabaseController.hpp  registeredUsersData.txt
MessengerApp/Database/RegisteredUserData/: data1.txt  data2.txt  data3.txt
MessengerApp/Encryption/: EncryptionManager.cpp  EncryptionManager.hpp
MessengerApp/Helpers/: LoginHubHelper.cpp  LoginHubHelper.hpp  UIHelper.cpp  UIHelper.hpp
MessengerApp/Login/: AdminLoginHub.cpp  AdminLoginHub.hpp  AdminLoginHubCreator.cpp  AdminLoginHubCreator.hpp  LoginData.hpp  UserLoginHub.cpp  UserLoginHub.hpp  UserLoginHubCreator.hpp
MessengerApp/LoginHub/: AdminLoginHub.cpp  AdminLoginHub.hpp  AdminLoginHubCreator.cpp  AdminLoginHubCreator.hpp  LoginData.hpp  LoginHubCreator.cpp  UserLoginHub.cpp  UserLoginHub.hpp  UserLoginHubCreator.cpp  UserLoginHubCreator.hpp
MessengerApp/Registration/: AdminRegistrationHandler.cpp  AdminRegistrationHandler.hpp  RegistrationHandler.cpp  RegistrationHandler.hpp  UserRegistrationHandler.cpp  UserRegistrationHandler.hpp
MessengerApp/Tests/: AdminDatabaseControllerTests.cpp  AdminLoginHubTests.cpp  AdminRegistrationHandlerTests.cpp  DatabaseControllerTests.cpp  EncryptionManagerTests.cpp  MessageDecoderTests.cpp  MessageHandlerTests.cpp  MessageTests.cpp  RegistrationHandlerTests.cpp  UserDatabaseControllerTests.cpp  UserLoginHubTests.cpp  UserRegistrationHandlerTests.cpp
MessengerApp/Tests/common/: commonFixture.cpp  commonFixture.hpp
MessengerApp/Tests/mocks/: DatabaseControllerMock.hpp  EncryptionManagerMock.hpp  RegistrationHandlerMock.hpp
MessengerApp/Tests/testDatabases/: testLoadDatabase.txt
MessengerInterfaces/: CMakeLists.txt  IDatabaseController.hpp  ILoginHub.hpp  ILoginHubFactory.hpp  IRegistrationHandler.hpp
cmake/: GTest.cmake  OpenSSL.cmake
